fix(table.sticky): body overflow

--- a/src/sass/components/_table.sticky.scss
+++ b/src/sass/components/_table.sticky.scss
@@ -51,7 +51,7 @@ $table-spacer: 5 * $table-cell-indent;
 
     tbody {
         box-shadow: map-get($table-group-box-shadow, inner);
-        overflow-y: auto;
+        // overflow-y: auto;
     }
 
     thead + tbody,
